--- a/documentation/Архитектура.html
+++ b/documentation/Архитектура.html
@@ -41,10 +41,55 @@ function processText(code)
 	return code;
 }
 
+function createNames()
+{
+	var a=document.getElementById('root').getElementsByTagName('a');
+	var names=[];
+	for(var i=0; i<a.length; i++)
+	{
+		names.push({href:a[i].getAttribute('href'), name:a[i].innerHTML});
+	}
+	return names;
+}
+
+function processName(names, text)
+{
+	for(var i=0; i<names.length; i++)
+	{
+		if(text==names[i].name)
+		{
+			return "<a href='"+names[i].href+"'>"+text+"</a>";
+		}
+	}
+	return text;
+}
+
+function tipsSorter(a, b)
+{
+	return b.r-a.r;
+}
+
+function getTip(text, href)
+{
+	return '<li onclick="clearSearch();"><a href="'+href+'">'+text+'</a></li>';
+}
+
+function clearSearch()
+{
+	document.getElementById('tips').style.visibility="hidden";
+	document.getElementById('search').value="";
+}
+
 </script>
 </head><body>
 <div id='nav'>
-<a href='#top'>Наверх</a>
+<a href='#top' id='top-lnk'>Наверх</a>
+<input type='text' placeholder='Имя класса...' id='search' />
+<div id='tips-wrapper'>
+<ul id='tips'>
+	<li>Подсказка 1</li>
+	<li>Подсказка 2</li>
+</ul></div>
 </div>
 <!--------------------------------------------------------------------------------------------------------------->
 
@@ -52,7 +97,7 @@ function processText(code)
 <a name="top"></a>
 <h1>Структура проекта</h1>
 <h3>Пространства имён и классы:</h3>
-<ul class='structure'>
+<ul class='structure' id='root'>
 <li><a href="#ru.sdevteam.vinv.main">ru.sdevteam.vinv.main</a> – основа программы, базовые классы, слабо связанные с игровым процессом:
 	<ul>
 		<li><a href="#ru.sdevteam.vinv.main.Program">Program</a> – содержит метод <code>main</code></li>
@@ -395,7 +440,14 @@ void moveTo(float nx, float ny);
 void moveBy(float dx, float dy);
 
 // вызывается перед уничтожением объекта (как участка памяти)
-void dispose(); </pre>
+void dispose();
+
+// вращение объекта
+// (эта часть пока в разработке, её не трогать)
+// подробнее о вращении см. внизу
+abstract boolean isRotatable();
+void rotate(float angle);
+float getRotation();</pre>
 Структура наследования игровых объектов (возможно) будет включать также производные от данного класса звенья вроде <code>DynamicGameObject</code>, <code>Destructable</code> (определяющий hp), <code>StaticGameObject</code> и т.д.
 </div>
 
@@ -439,7 +491,7 @@ protected abstract void onDestroyed(); // должен вызываться пр
 {
 	...
 }</pre>
-Модель башни, содержит её характеристики и положение на поле. Наследуется от некоторого производного от <code>GameObject</code> класса, содержащего в себе определение hp. Метод <code>getSprite()</code> внутри себя использует класс <code>TowerSprite</code>, для выноса логики подбора изображения в конструктор этого класса. Содержит методы:
+Модель башни, содержит её характеристики и положение на поле. Метод <code>getSprite()</code> внутри себя использует класс <code>TowerSprite</code>, для выноса логики подбора изображения в конструктор этого класса. В первой сборке класс не будет абстрактным. С добавлением нескольких типов башен, реализованных как наследники данного класса, абстрактность будет необходимо добавить. Содержит методы:
 <pre>// возвращает true, если прошло достаточно времени с последнего выстрела
 boolean canShoot();
 // тип выпускаемых снарядов
@@ -463,7 +515,7 @@ String getDescription();
 {
 	...
 }</pre>
-Модель жука, содержит его характеристики и положение на поле. Наследуется от некоторого производного от <code>GameObject</code> класса, содержащего в себе определение hp. Метод <code>getSprite()</code> внутри себя использует класс <code>BugSprite</code>, для выноса логики подбора изображения в конструктор этого класса. Содержит методы:
+Модель жука, содержит его характеристики и положение на поле. Метод <code>getSprite()</code> внутри себя использует класс <code>BugSprite</code>, для выноса логики подбора изображения в конструктор этого класса. Абстрактность класса - аналогично классу <code>Tower</code>. Содержит методы:
 <pre>// для представления информации о данном типе жука пользователю
 // (можно сделать что-то вроде бестиария)
 String getName();
@@ -498,10 +550,7 @@ void moveBy(float dx, float dy);
 {
 	...
 }</pre>
-Экземпляр класса создаётся объектом <code>GameScreen</code> в начале его существования. <code>LevelController</code> при своём создании получает номер уровня, который необходимо построить, и инициализирует его модель (получает её с помощью <code>Level.createLevel(int num)</code>). Является связующим звеном между отрисовщиком (<code>GameScreen</code>) и моделью (<code>Level</code>). При вызове <code>update()</code> вызывает <code>update()</code> модели, а затем исполняет свой код, обрабатывающий взаимодействие игровых объектов (к таким не относятся самообновления объектов, т.е. такие действия, которые объект в состоянии выполнить сам). При вызове же <code>paint(Graphics g)</code> поочерёдно вызывает соответствующие методы для всех испольхуемых спрайтов, для чего использует <code>Level.getSprites()</code> либо (более предпочтительный вариант) получает массив объектов <code>GameObject</code>, а затем вызывает <code>.getSprite().paint(g)</code> каждого. Содержит единственный конструктор, принимающий номер создаваемого уровня:
-<pre>LevelController(int levelNum) { ... }
-</pre>
-Ещё один вариант взаимодействия: в конструктор будет передаваться уже созданный в конструкторе <code>GameScreen</code> экземпляр <code>Level</code> (внутри самого <code>GameScreen</code> этот экземпляр сохраняться не будет), e.g.
+Экземпляр класса создаётся объектом <code>GameScreen</code> в начале его существования. <code>LevelController</code> при своём создании получает номер уровня, который необходимо построить, и инициализирует его модель (получает её с помощью <code>Level.createLevel(int num)</code>). Является связующим звеном между отрисовщиком (<code>GameScreen</code>) и моделью (<code>Level</code>). При вызове <code>update()</code> вызывает <code>update()</code> модели, а затем исполняет свой код, обрабатывающий взаимодействие игровых объектов (к таким не относятся самообновления объектов, т.е. такие действия, которые объект в состоянии выполнить сам). При вызове же <code>paint(Graphics g)</code> (более предпочтительный вариант) получает массив объектов <code>GameObject</code>, а затем вызывает <code>.getSprite().paint(g)</code> каждого. В конструктор будет передаваться уже созданный в конструкторе <code>GameScreen</code> экземпляр <code>Level</code> (внутри самого <code>GameScreen</code> этот экземпляр сохраняться не будет), e.g.
 <pre>public GameScreen(int levelNum)
 {
 	...
@@ -531,7 +580,7 @@ int getControlledCount();
 <h2>Смена экранов с возможностью последующего возврата к ним</h2>
 Потребность в подобной схеме может возникнуть, например, при переходе с экрана главного меню в экран настроек (если для этих целей будут предусмотрены разные экраны). В этом случае экран, теряющий активность, создаёт новый экран, тип которого поддерживает метод, например, <code>void setPreviousScreen(Screen item)</code>, и затем вызовом метода setActiveScreen класса GameCanvas лишается возможности обновляться в методах <code>update</code> и <code>paint</code>, однако при этом сохраняется в памяти посредством ссылки на него из нового экрана. Впоследствии экран может быть вызван к жизни передачей его в метод <code>setActiveScreen</code> класса <code>GameCanvas</code>, после чего другой экран уничтожается. Таким образом можно организовать стек экранов.
 <h2>Обработка движения спрайтов на уровне</h2>
-Для каждого типа движения создаётся класс-контроллер, реализующий методы для редактирования списка обрабатываемых спрайтов и метод <code>void move()</code>. Например: <code>PhysMover</code>, <code>PathMover</code> и т.д. Желательно проектировать класс так, чтобы требовалось создание всего лишь одного его экземпляра для многих обрабатываемых спрайтов. Ещё одним вариантом может служить создание контроллера и передача его непосредственно в спрайт, чтобы тот управлял им из его же метода <code>update()</code>. Однако этот подход, по-видимому, нарушает принципы MVC.
+Для каждого типа движения создаётся класс-контроллер, реализующий методы для редактирования списка обрабатываемых спрайтов и метод <code>void move()</code>. Например: <code>PhysMover</code>, <code>PathMover</code> и т.д. Необходимо проектировать класс так, чтобы требовалось создание всего лишь одного его экземпляра для многих обрабатываемых спрайтов.
 <h2>Связь модели, представления и контроллера во время игры</h2>
 Спрайты объектов будут создаваться единожды, при создании соответствующих объектов (как правило). Затем объекты будут запоминать в себе ссылки на уже созданные спрайты и при последующих вызовах <code>getSprite()</code> будут возвращать их, а не создавать новые. Некоторые из созданных спрайтов, которые должны изменяться в соответствии с изменяющейся моделью, будут также сохранять в себе ссылки на эти модели, чтобы при вызове метода <code>paint(Graphics g)</code> (либо в методе <code>update()</code>) соответственно изменяться.<br />
 Контроллер уровня будет получать от экземпляра <code>Level</code> массив <code>GameObject[]</code>, вызывать <code>update()</code> каждого элемента, затем обрабатывать взаимодействие разных объектов (например, пуль и жуков, башен и пуль (под таковым понимать создание башнями определённых типов пуль) и т.д.). 
@@ -540,6 +589,9 @@ int getControlledCount();
 <h2>Обработка событий</h2>
 События клавиатуры и мыши будут доставаться из соответствующих очередей класса <code>Input</code> в потоке обновления логики экземплярами класса <code>Screen</code>. При этом планируется, что они будут тут же и обрабатываться этими объектами, так как сразу после получения события ссылка на него удаляется из очереди событий в <code>Input</code>.
 События поступают в очередь через соответствующие методы класса <code>Input</code>. Кладёт события в очередь главная форма.
+<h2>Повороты игровых объектов</h2>
+Некоторые игровые объекты (например, башни и жуки) должны поддерживать повороты на некоторые (изнчально заданные) углы. Для этого в классе <code>GameObject</code> определён метод <code>isRotatable()</code>, а также методы для поворота объекта (разумеется, работающие, только если вышеназыванный метод возвращает <code>true</code>). При этом фактический угол поворота объекта выражается переменной типа <code>float</code> - она хранит угол в радианах, отсчитываемый от положительного направления оси Ox по часовой стрелке (т.к. ось Oy направлена вниз). Такое точное значение угла может быть нужно, допустим, для рассчёта направления полёта пули.<br />
+Отображаемый же угол поворота - дискретен. Нужное направление выбирается округлением фактического угла до дискретного спектра значений, определяемого типом объекта (допустим, для башни - 12, для жука - 8). Отрисовка объекта, повёрнутого в нужном направлении, реализуется следующим образом: заранее создаются (художником (или кто там у нас)) несколько изображений объекта, повёрнутого на эти углы, и упаковываются в один спрайт. Затем, при отрисовке, спрайт объекта просто выбирает нужный кадр и переходит на него.
 
 </div>
 <script>
@@ -547,6 +599,63 @@ var arr=document.getElementsByTagName("pre");
 for(var i=0; i<arr.length; i++)
 {
 	arr[i].innerHTML=processText(arr[i].innerHTML);
+}
+arr=document.getElementsByTagName("code");
+document.names=createNames();
+for(var i=0; i<arr.length; i++)
+{
+	arr[i].innerHTML=processName(document.names, arr[i].innerHTML);
+}
+
+document.getElementById('search').onkeyup=function(e)
+{
+	var text=document.getElementById('search').value.toLowerCase();
+	if(text=="")
+	{
+		document.getElementById('tips').style.visibility="hidden";
+	}
+	else
+	{
+		var tips=[];
+		for(var i=0; i<document.names.length; i++)
+		{
+			var ind=document.names[i].href.toLowerCase().indexOf(text);
+			var rel=0; //relativity, greater => on the top, 0 => not in list
+			if(ind==0) continue;
+			if(ind!=-1)
+			{
+				rel=1;
+			}
+			ind=document.names[i].name.toLowerCase().indexOf(text);
+			if(ind!=-1) rel=2;
+			if(ind==0) rel=3;
+			
+			if(rel!=0)
+			{
+				tips.push({tip:document.names[i], r:rel});
+			}
+		}
+		
+		if(tips.length==0)
+		{
+			tips.push({tip:{name:"Нет подходящих элементов...", href:"#"}, r:1});
+		}
+		else
+		{
+			tips.sort(tipsSorter);
+		}
+		
+		var list=document.getElementById('tips');
+		
+		var inner="";
+		for(var i=0; i<tips.length; i++)
+		{
+			inner+=getTip(tips[i].tip.name, tips[i].tip.href);
+		}
+		list.innerHTML=inner;
+		
+		list.style.visibility="visible";
+	}
 }
 </script>
 </body></html>
